RESOLVED FIXED271254
[WGSL] shader,validation,shader_io,builtins:* is failing
https://bugs.webkit.org/show_bug.cgi?id=271254
Summary [WGSL] shader,validation,shader_io,builtins:* is failing
Tadeu Zagallo
Reported 2024-03-19 10:41:53 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-19 10:42:16 PDT
Tadeu Zagallo
Comment 2 2024-03-19 10:58:02 PDT
EWS
Comment 3 2024-03-21 06:29:49 PDT
Committed 276454@main (ec673c847c6a): <https://commits.webkit.org/276454@main> Reviewed commits have been landed. Closing PR #26132 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.