[WGSL] shader,validation,shader_io,builtins:* is failing https://bugs.webkit.org/show_bug.cgi?id=271254 rdar://125022496

Reviewed by Mike Wyrzykowski.

Validate builtin attributes according to the spec[1].

[1]: https://www.w3.org/TR/WGSL/#builtin-inputs-outputs

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/shader_io/builtins-expected.txt:
* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::validateIO):
(WGSL::AttributeValidator::validateBuiltinIO):
(WGSL::AttributeValidator::validateLocationIO):
(WGSL::AttributeValidator::validateStructIO):
(WGSL::validateIO):
* Source/WebGPU/WGSL/AttributeValidator.h:
* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/WGSL.cpp:
(WGSL::staticCheck):
* Source/WebGPU/WGSL/WGSLEnums.cpp:
* Source/WebGPU/WGSL/WGSLEnums.h:

Canonical link: https://commits.webkit.org/276454@main